mundança de foto na home

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <main>
     <img
-    src="img/Blog TI..jpg"
+    src="img/telahome.jpeg"
     alt="Imagem retratando as tantas opções de códigos de programação"
     />
     <nav>
