Criado pastas para cada página do blog

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main>
-    <img
+    <img class="telahome"
     src="img/telahome.jpeg"
     alt="Imagem retratando as tantas opções de códigos de programação"
     />
