inclusão da pagina história da programação

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     />
     <nav>
         <ul>
-          <button><li><a href="noticias_da_semana.html">Notícias da Semana</a></li></button>      
-          <button><li><a href="dicas_e_tutoriais.html">Dicas e Tutoriais</a></li></button>      
-          <button><li><a href="cursos.html">Cursos</a></li></button>
-          <button><li><a href="historia_da_programacao.html">História da Programação</a></li></button> 
-          <button><li><a href="sobre_quem_somos.html">Sobre Quem Somos</a></li></button> 
+          <button><li><a href="noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li></button>      
+          <button><li><a href="dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li></button>      
+          <button><li><a href="cursos/cursos.html">Cursos</a></li></button>
+          <button><li><a href="historia_da_programacao/historia_da_programacao.html">História da Programação</a></li></button> 
+          <button><li><a href="sobre_quem_somos/sobre_quem_somos.html">Sobre Quem Somos</a></li></button> 
                   
         </ul>
       </nav>
