--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
     <section>
       <h3>Cursos</h3>
-      <p>Navegue pelos melhor cursos que selecionamos para sua formação.</p>
+      <p>Navegue pelos melhores cursos que selecionamos para sua formação.</p>
     </section>
     <section>
       <h3>História da Programação</h3>
