--- a/noticias_da_semana/noticias_da_semana.html
+++ b/noticias_da_semana/noticias_da_semana.html
@@ -46,7 +46,7 @@
         <section>
             <a>
                 <img height="150px" width="250px"
-                src="./devmedia.png" 
+                src="./img/devmedia.png" 
                 alt="Imagem do site Devmedia">
                 <p>Devmedia</p>
               </a>
