adicionando css na página

--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/codigo-e-cafe/cursos/style.css">
+    <link rel="stylesheet" href="/cursos/style.css">
     <title>Cursos</title>
 </head>
 <body style="background-color: #edede9">
     <header>
         <nav>
             <ul>
-               <a href="/codigo-e-cafe/index.html"> <img sheight="200px" width="200px" style="border-radius: 50%"  src="/cursos/img/logo.png" alt="logo HUB DA TI"> </a>
-              <li><a href="/codigo-e-cafe/noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>      
-              <li><a href="/codigo-e-cafe/dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>    
-              <li><a href="/codigo-e-cafe/cursos/cursos.html">Cursos</a></li></button>
-              <li><a href="/codigo-e-cafe/historia_da_programacao/historia_da_programacao.html">História da Programação</a></li>
-              <li><a href="/codigo-e-cafe/sobre_quem_somos/desenvolvedores.html">Sobre Quem Somos</a></li>        
+               <a href="/index.html"> <img sheight="200px" width="200px" style="border-radius: 50%"  src="/cursos/img/logo.png" alt="logo HUB DA TI"> </a>
+              <li><a href="/noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>      
+              <li><a href="/dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>    
+              <li><a href="/cursos/cursos.html">Cursos</a></li></button>
+              <li><a href="/historia_da_programacao/historia_da_programacao.html">História da Programação</a></li>
+              <li><a href="/sobre_quem_somos/desenvolvedores.html">Sobre Quem Somos</a></li>        
             </ul>
           </nav>
         <img src="/cursos/img/telahome.jpeg" alt="Imagem retratando as tantas opções de códigos de programação"/>
