Update sobre os devs, inserção do formulário.

--- a/sobre_quem_somos/desenvolvedores.html
+++ b/sobre_quem_somos/desenvolvedores.html
@@ -20,7 +20,7 @@
     <main>
       <section class="section" style="border: solid 1px; margin-left: 1%">
         <img
-          src="./assets/images/photo_profile.jpg"
+          src="./assets/images/thais.jpg"
           alt="Foto de Thais D'avilla"
           width="150px"
           height="150px"
@@ -28,21 +28,43 @@
         />
         <p><strong>Thais D'avilla</strong></p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ipsa
-          iusto exercitationem dolores! Excepturi praesentium molestias enim
-          architecto totam tenetur iste incidunt, cum delectus similique,
-          veritatis ratione consequuntur deserunt eveniet.
+          Estudante de Engenharia da Computação. Apaixonada pelo front end e por
+          desenvolvimento de software. Ama cinema e música.
         </p>
+        <a href="https://www.linkedin.com/in/thaisdavilla/" target="_blank">
+          <img
+            src="./assets/icons/linkedin.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao Linkedin da desenvolvedora."
+          />
+        </a>
+        <a href="https://github.com/ThaisDavilla" target="_blank">
+          <img
+            src="./assets/icons/github.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao GitHub da desenvolvedora."
+          />
+        </a>
+        <a href="https://www.instagram.com/athaisdavilla/" target="_blank">
+          <img
+            src="./assets/icons/instagram.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao Instagram da desenvolvedora"
+          />
+        </a>
       </section>
       <br />
 
       <section class="section" style="border: solid 1px; margin-left: 1%">
         <p><strong>Alex Baracho</strong></p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ipsa
-          iusto exercitationem dolores! Excepturi praesentium molestias enim
-          architecto totam tenetur iste incidunt, cum delectus similique,
-          veritatis ratione consequuntur deserunt eveniet.
+          Alex Baracho, 28 anos. Estudante de análise e desenvolvimento de
+          sistemas, apaixonado por tecnologia. Foco em front end e muito
+          interesse em inteligência artificial. Ama assistir animes nas horas
+          vagas, jogar e ouvir um bom rock.
         </p>
         <img
           src="./assets/images/alex.jpg"
@@ -51,6 +73,30 @@
           height="150px"
           style="border-radius: 50%"
         />
+        <a href=" https://www.linkedin.com/in/alex-silvarb" target="_blank">
+          <img
+            src="./assets/icons/linkedin.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao Linkedin da desenvolvedora."
+          />
+        </a>
+        <a href="https://github.com/BarachoSilva" target="_blank">
+          <img
+            src="./assets/icons/github.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao GitHub da desenvolvedora."
+          />
+        </a>
+        <a href="https://www.instagram.com/barachors/" target="_blank">
+          <img
+            src="./assets/icons/instagram.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao Instagram da desenvolvedora"
+          />
+        </a>
       </section>
       <br />
 
@@ -65,20 +111,43 @@
         <p><strong>Victor Moreira</strong></p>
         <p>
           Profissional dedicado, cozinheiro de verdade, ciclista urbano,
-          estudande do mundo e explorador da vida. Interessado por lógico,
+          estudande do mundo e explorador da vida. Interessado por lógica,
           programação, inteligência artificial e tudo mais do universo da
           computação.
         </p>
+        <a href="" target="_blank">
+          <img
+            src="./assets/icons/linkedin.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao Linkedin da desenvolvedora."
+          />
+        </a>
+        <a href="" target="_blank">
+          <img
+            src="./assets/icons/github.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao GitHub da desenvolvedora."
+          />
+        </a>
+        <a href="" target="_blank">
+          <img
+            src="./assets/icons/instagram.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao Instagram da desenvolvedora"
+          />
+        </a>
       </section>
       <br />
 
       <section class="section" style="border: solid 1px; margin-left: 1%">
         <p><strong>Joice JeniSilva</strong></p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ipsa
-          iusto exercitationem dolores! Excepturi praesentium molestias enim
-          architecto totam tenetur iste incidunt, cum delectus similique,
-          veritatis ratione consequuntur deserunt eveniet.
+          Mãe dedicada de duas adoráveis meninas. Com formação em administração
+          e contabilidade. Está, atualmente, em uma emocionante transição de
+          carreira e em busca de novas experiências profissionais.
         </p>
         <img
           src="./assets/images/joyce.jpg"
@@ -87,6 +156,30 @@
           height="150px"
           style="border-radius: 50%"
         />
+        <a href="" target="_blank">
+          <img
+            src="./assets/icons/linkedin.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao Linkedin da desenvolvedora."
+          />
+        </a>
+        <a href="" target="_blank">
+          <img
+            src="./assets/icons/github.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao GitHub da desenvolvedora."
+          />
+        </a>
+        <a href="" target="_blank">
+          <img
+            src="./assets/icons/instagram.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao Instagram da desenvolvedora"
+          />
+        </a>
       </section>
       <br />
 
@@ -105,9 +198,86 @@
           architecto totam tenetur iste incidunt, cum delectus similique,
           veritatis ratione consequuntur deserunt eveniet.
         </p>
+        <a href="" target="_blank">
+          <img
+            src="./assets/icons/linkedin.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao Linkedin da desenvolvedora."
+          />
+        </a>
+        <a href="" target="_blank">
+          <img
+            src="./assets/icons/github.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao GitHub da desenvolvedora."
+          />
+        </a>
+        <a href="" target="_blank">
+          <img
+            src="./assets/icons/instagram.png"
+            width="25px"
+            height="25px"
+            alt="Ícone de acesso ao Instagram da desenvolvedora"
+          />
+        </a>
       </section>
+      <form action="" style="margin-left: 10px">
+        <h2>Quer falar conosco?</h2>
+        <p>Envie-nos sua opinão, dúvida ou sugestão!</p>
+        <section>
+          <div class="data">
+            <p>Nome:</p>
+            <input
+              type="text"
+              name="userName"
+              placeholder="Seu nome completo"
+            />
+
+            <p>E-mail:</p>
+            <input
+              type="email"
+              name="userEmail"
+              placeholder="seuemail@exemplo.com"
+            />
+
+            <p>O que você quer nos dizer?</p>
+            <textarea name="userComment" id="" cols="30" rows="4"></textarea>
+          </div>
+
+          <div class="tech">
+            <p>Você gosta de Tecnologia?</p>
+            <label for="sim">Sim</label>
+            <input id="sim" type="radio" name="exercise" value="1" />
+            <label for="nao">Não</label>
+            <input id="nao" type="radio" name="exercise" value="2" />
+            <p>Por onde você lê seus tópicos favoritos?</p>
+            <label for="books">Livros</label>
+            <input id="books" type="checkbox" name="books" />
+            <label>Sites</label>
+            <input type="checkbox" name="web" />
+            <label>Aplicativos</label>
+            <input type="checkbox" name="apps" />
+            <label>Revistas</label>
+            <input type="checkbox" name="magazines" />
+            <p>Qual área da tecnologia faz seu coração bater mais rápido?</p>
+            <select name="tech" id="">
+              <option value=""></option>
+              <option value="1">Front End</option>
+              <option value="2">Back End</option>
+              <option value="3">Dados</option>
+              <option value="4">Segurança</option>
+              <option value="5">Inteligência Artificial</option>
+            </select>
+
+            <button id="#form-button" value="submit">Enviar</button>
+          </div>
+        </section>
+      </form>
     </main>
-    <footer>
+
+    <footer style="margin-left: 10px">
       <p>Todos os direitos reservados <span>&#169;</span></p>
       <p>Clique no link abaixo e conheça a Proz Educação</p>
       <a href="https://prozeducacao.com.br/" target="_blank">Proz Educação</a>
