Inicio da estilização com CSS.

--- a/sobre_quem_somos/desenvolvedores.html
+++ b/sobre_quem_somos/desenvolvedores.html
@@ -3,226 +3,202 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="./assets/css/header-style.css" />
+    <link rel="stylesheet" href="./assets/css/main-style.css" />
     <title>Quem Somos</title>
   </head>
-  <body style="background-color: #edede9">
+  <body>
     <header class="header">
-      <img
-        class="logo"
-        src=""
-        alt="Logotipo do Blog"
-        width="200px"
-        height="200px"
-      />
-      <button class="voltar" style="margin-left: 80%">Voltar ao blog</button>
-      <h1 style="margin-left: 28%">Conheça o nosso time de desenvolvedores!</h1>
+      <img class="logo" src="" alt="Logotipo do Blog" />
+      <nav class="nav">
+        <ul class="ul">
+          <li class="li">
+            <a href="./noticias_da_semana/noticias_da_semana.html"
+              >Notícias da Semana</a
+            >
+          </li>
+          <li>
+            <a href="./dicas_e_tutoriais/dicas_e_tutoriais.html"
+              >Dicas e Tutoriais</a
+            >
+          </li>
+          <li><a href="./cursos/cursos.html">Cursos</a></li>
+          <li>
+            <a href="./historia_da_programacao/historia_da_programacao.html"
+              >História da Programação</a
+            >
+          </li>
+          <li>
+            <a href="./sobre_quem_somos/desenvolvedores.html"
+              >Sobre Quem Somos</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-      <section class="section" style="border: solid 1px; margin-left: 1%">
+      <h1>Conheça o nosso time de desenvolvedores!</h1>
+      <section class="section">
         <img
+          class="profile"
           src="./assets/images/thais.jpg"
           alt="Foto de Thais D'avilla"
-          width="150px"
-          height="150px"
-          style="border-radius: 50%"
         />
-        <p><strong>Thais D'avilla</strong></p>
-        <p>
-          Estudante de Engenharia da Computação. Apaixonada pelo front end e por
-          desenvolvimento de software. Ama cinema e música.
-        </p>
-        <a href="https://www.linkedin.com/in/thaisdavilla/" target="_blank">
-          <img
-            src="./assets/icons/linkedin.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao Linkedin da desenvolvedora."
-          />
-        </a>
-        <a href="https://github.com/ThaisDavilla" target="_blank">
-          <img
-            src="./assets/icons/github.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao GitHub da desenvolvedora."
-          />
-        </a>
-        <a href="https://www.instagram.com/athaisdavilla/" target="_blank">
-          <img
-            src="./assets/icons/instagram.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao Instagram da desenvolvedora"
-          />
-        </a>
+        <div class="div">
+          <p class="name">Thais D'avilla</p>
+          <p>
+            Estudante de Engenharia da Computação. Apaixonada pelo front end e
+            por desenvolvimento de software. Ama cinema e música.
+          </p>
+          <nav>
+            <a href="https://www.linkedin.com/in/thaisdavilla/" target="_blank">
+              <img
+                class="redes"
+                src="./assets/icons/linkedin.png"
+                alt="Ícone de acesso ao Linkedin da desenvolvedora."
+              />
+            </a>
+            <a href="https://github.com/ThaisDavilla" target="_blank">
+              <img
+                class="redes"
+                src="./assets/icons/github.png"
+                alt="Ícone de acesso ao GitHub da desenvolvedora."
+              />
+            </a>
+            <a href="https://www.instagram.com/athaisdavilla/" target="_blank">
+              <img
+                class="redes"
+                src="./assets/icons/instagram.png"
+                alt="Ícone de acesso ao Instagram da desenvolvedora"
+              />
+            </a>
+          </nav>
+        </div>
       </section>
-      <br />
 
-      <section class="section" style="border: solid 1px; margin-left: 1%">
-        <p><strong>Alex Baracho</strong></p>
-        <p>
-          Alex Baracho, 28 anos. Estudante de análise e desenvolvimento de
-          sistemas, apaixonado por tecnologia. Foco em front end e muito
-          interesse em inteligência artificial. Ama assistir animes nas horas
-          vagas, jogar e ouvir um bom rock.
-        </p>
+      <section class="section">
+        <div class="div">
+          <p class="name">Alex Baracho</p>
+          <p>
+            Alex Baracho, 28 anos. Estudante de análise e desenvolvimento de
+            sistemas, apaixonado por tecnologia. Foco em front end e muito
+            interesse em inteligência artificial. Ama assistir animes nas horas
+            vagas, jogar e ouvir um bom rock.
+          </p>
+          <nav>
+            <a href=" https://www.linkedin.com/in/alex-silvarb" target="_blank">
+              <img
+                class="redes"
+                src="./assets/icons/linkedin.png"
+                alt="Ícone de acesso ao Linkedin da desenvolvedora."
+              />
+            </a>
+            <a href="https://github.com/BarachoSilva" target="_blank">
+              <img
+                class="redes"
+                src="./assets/icons/github.png"
+                alt="Ícone de acesso ao GitHub da desenvolvedora."
+              />
+            </a>
+            <a href="https://www.instagram.com/barachors/" target="_blank">
+              <img
+                class="redes"
+                src="./assets/icons/instagram.png"
+                alt="Ícone de acesso ao Instagram da desenvolvedora"
+              />
+            </a>
+          </nav>
+        </div>
+
         <img
+          class="profile"
           src="./assets/images/alex.jpg"
           alt="Foto de Alex"
-          width="150px"
-          height="150px"
-          style="border-radius: 50%"
         />
-        <a href=" https://www.linkedin.com/in/alex-silvarb" target="_blank">
-          <img
-            src="./assets/icons/linkedin.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao Linkedin da desenvolvedora."
-          />
-        </a>
-        <a href="https://github.com/BarachoSilva" target="_blank">
-          <img
-            src="./assets/icons/github.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao GitHub da desenvolvedora."
-          />
-        </a>
-        <a href="https://www.instagram.com/barachors/" target="_blank">
-          <img
-            src="./assets/icons/instagram.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao Instagram da desenvolvedora"
-          />
-        </a>
       </section>
-      <br />
 
-      <section class="section" style="border: solid 1px; margin-left: 1%">
+      <section class="section">
         <img
+          class="profile"
           src="./assets/images/victor.jpg"
           alt="Foto de Victor"
-          width="150px"
-          height="150px"
-          style="border-radius: 50%"
         />
-        <p><strong>Victor Moreira</strong></p>
-        <p>
-          Profissional dedicado, cozinheiro de verdade, ciclista urbano,
-          estudande do mundo e explorador da vida. Interessado por lógica,
-          programação, inteligência artificial e tudo mais do universo da
-          computação.
-        </p>
-        <a href="" target="_blank">
-          <img
-            src="./assets/icons/linkedin.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao Linkedin da desenvolvedora."
-          />
-        </a>
-        <a href="" target="_blank">
-          <img
-            src="./assets/icons/github.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao GitHub da desenvolvedora."
-          />
-        </a>
-        <a href="" target="_blank">
-          <img
-            src="./assets/icons/instagram.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao Instagram da desenvolvedora"
-          />
-        </a>
+        <div class="div">
+          <p class="name">Victor Moreira</p>
+          <p>
+            Profissional dedicado, cozinheiro de verdade, ciclista urbano,
+            estudande do mundo e explorador da vida. Interessado por lógica,
+            programação, inteligência artificial e tudo mais do universo da
+            computação.
+          </p>
+          <nav>
+            <a href="" target="_blank">
+              <img
+                class="redes"
+                src="./assets/icons/linkedin.png"
+                alt="Ícone de acesso ao Linkedin da desenvolvedora."
+              />
+            </a>
+            <a href="" target="_blank">
+              <img
+                class="redes"
+                src="./assets/icons/github.png"
+                alt="Ícone de acesso ao GitHub da desenvolvedora."
+              />
+            </a>
+            <a href="" target="_blank">
+              <img
+                class="redes"
+                src="./assets/icons/instagram.png"
+                alt="Ícone de acesso ao Instagram da desenvolvedora"
+              />
+            </a>
+          </nav>
+        </div class="div">
       </section>
-      <br />
 
-      <section class="section" style="border: solid 1px; margin-left: 1%">
-        <p><strong>Joice JeniSilva</strong></p>
-        <p>
-          Mãe dedicada de duas adoráveis meninas. Com formação em administração
-          e contabilidade. Está, atualmente, em uma emocionante transição de
-          carreira e em busca de novas experiências profissionais.
-        </p>
+      <section class="section">
+        <div class="div">
+          <p class="name">Joice JeniSilva</p>
+          <p>
+            Mãe dedicada de duas adoráveis meninas. Com formação em
+            administração e contabilidade. Está, atualmente, em uma emocionante
+            transição de carreira e em busca de novas experiências
+            profissionais.
+          </p>
+          <nav>
+            <a href="" target="_blank">
+              <img
+                class="redes"
+                src="./assets/icons/linkedin.png"
+                alt="Ícone de acesso ao Linkedin da desenvolvedora."
+              />
+            </a>
+            <a href="" target="_blank">
+              <img
+                class="redes"
+                src="./assets/icons/github.png"
+                alt="Ícone de acesso ao GitHub da desenvolvedora."
+              />
+            </a>
+            <a href="" target="_blank">
+              <img
+                class="redes"
+                src="./assets/icons/instagram.png"
+                alt="Ícone de acesso ao Instagram da desenvolvedora"
+              />
+            </a>
+          </nav>
+        </div>
+
         <img
+          class="profile"
           src="./assets/images/joyce.jpg"
           alt="Foto do Joyce"
-          width="150px"
-          height="150px"
-          style="border-radius: 50%"
         />
-        <a href="" target="_blank">
-          <img
-            src="./assets/icons/linkedin.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao Linkedin da desenvolvedora."
-          />
-        </a>
-        <a href="" target="_blank">
-          <img
-            src="./assets/icons/github.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao GitHub da desenvolvedora."
-          />
-        </a>
-        <a href="" target="_blank">
-          <img
-            src="./assets/icons/instagram.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao Instagram da desenvolvedora"
-          />
-        </a>
       </section>
-      <br />
 
-      <section class="section" style="border: solid 1px; margin-left: 1%">
-        <img
-          src=""
-          alt="Foto do dev"
-          width="150px"
-          height="150px"
-          style="border-radius: 50%"
-        />
-        <p><strong>Tassiana Vilain</strong></p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ipsa
-          iusto exercitationem dolores! Excepturi praesentium molestias enim
-          architecto totam tenetur iste incidunt, cum delectus similique,
-          veritatis ratione consequuntur deserunt eveniet.
-        </p>
-        <a href="" target="_blank">
-          <img
-            src="./assets/icons/linkedin.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao Linkedin da desenvolvedora."
-          />
-        </a>
-        <a href="" target="_blank">
-          <img
-            src="./assets/icons/github.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao GitHub da desenvolvedora."
-          />
-        </a>
-        <a href="" target="_blank">
-          <img
-            src="./assets/icons/instagram.png"
-            width="25px"
-            height="25px"
-            alt="Ícone de acesso ao Instagram da desenvolvedora"
-          />
-        </a>
-      </section>
       <form action="" style="margin-left: 10px">
         <h2>Quer falar conosco?</h2>
         <p>Envie-nos sua opinão, dúvida ou sugestão!</p>
