Estilização do formulário e do footer.

--- a/sobre_quem_somos/desenvolvedores.html
+++ b/sobre_quem_somos/desenvolvedores.html
@@ -6,11 +6,12 @@
 
     <link rel="stylesheet" href="./assets/css/header-style.css" />
     <link rel="stylesheet" href="./assets/css/main-style.css" />
+    <link rel="stylesheet" href="./assets/css/footer-style.css">
     <title>Quem Somos</title>
   </head>
   <body>
     <header class="header">
-      <img class="logo" src="" alt="Logotipo do Blog" />
+      <img class="logo" src="./assets/images/hub.png" alt="Logotipo do Blog" />
       <nav class="nav">
         <ul class="ul">
           <li class="li">
@@ -199,10 +200,10 @@
         />
       </section>
 
-      <form action="" style="margin-left: 10px">
+      <form action="" class="form">
         <h2>Quer falar conosco?</h2>
-        <p>Envie-nos sua opinão, dúvida ou sugestão!</p>
-        <section>
+        <h4>Envie-nos sua opinão, dúvida ou sugestão!</h4>
+        <section class="sectionForm">
           <div class="data">
             <p>Nome:</p>
             <input
@@ -237,7 +238,7 @@
             <input type="checkbox" name="apps" />
             <label>Revistas</label>
             <input type="checkbox" name="magazines" />
-            <p>Qual área da tecnologia faz seu coração bater mais rápido?</p>
+            <p>Qual área da tecnologia faz seu coração bater mais forte?</p>
             <select name="tech" id="">
               <option value=""></option>
               <option value="1">Front End</option>
@@ -253,9 +254,11 @@
       </form>
     </main>
 
-    <footer style="margin-left: 10px">
-      <p>Todos os direitos reservados <span>&#169;</span></p>
-      <p>Clique no link abaixo e conheça a Proz Educação</p>
+    <footer>
+      <p>Todos os direitos reservados <span>&#169;</span> 2023 Blog da TI</p>
+      <p>Veja o repósitório da página:</p>
+      <a href="https://github.com/BarachoSilva/codigo-e-cafe" target="_blank">Repositório</a>
+      <p>Clique abaixo e conheça a Proz Educação</p>
       <a href="https://prozeducacao.com.br/" target="_blank">Proz Educação</a>
     </footer>
   </body>
