correção de links

--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -10,19 +10,19 @@
 </head>
 <body>
     <header class="header">
-       <a href="/index.html"><img class="logo" src="/sobre_quem_somos/assets/images/hub.png" alt="Logotipo do Blog"></a>
+       <a href="/index.html"><img class="logo" src="./img/hub.png" alt="Logotipo do Blog"></a>
         <nav class="nav">
             <ul class="ul">
               <li class="li">
-                <a href="/noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>      
+                <a href="../noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>      
               <li>
-                <a href="/dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>    
+                <a href="../dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>    
               <li>
-                <a href="/cursos/cursos.html">Cursos</a></li>
+                <a href="./cursos.html">Cursos</a></li>
               <li>
-                <a href="/historia_da_programacao/historia_da_programacao.html">História da Programação</a></li>
+                <a href="../historia_da_programacao/historia_da_programacao.html">História da Programação</a></li>
               <li>
-                <a href="/sobre_quem_somos/desenvolvedores.html">Sobre Quem Somos</a></li>        
+                <a href="../sobre_quem_somos/desenvolvedores.html">Sobre Quem Somos</a></li>        
             </ul>
           </nav>
     </header>
@@ -34,7 +34,7 @@
                 <li>
                     <h2>Algoritmos</h2>
                     <img class="logocursos"
-                    src="/cursos/img/algoritmos-300x300.jpg" height="200px" width="200px" alt="imgens referencia ao curso">
+                    src="./img/algoritmos-300x300.jpg" height="200px" width="200px" alt="imgens referencia ao curso">
                     <p>
                         Hoje em dia, algoritmos computacionais estão presentes em quase tudo na nossa vida. Além dos tradicionais computadores e notebooks, muitos estão totalmente acostumados com o uso de aplicativos para smartphones e tablets, TVs inteligentes podem executar programas personalizados e até mesmo outros aparelhos que usamos no nosso dia-a-dia.
     
@@ -50,7 +50,7 @@
                 <li>
                     <h2>Git e Github</h2>
                     <img class="logocursos" height="200px" width="200px" 
-                    src="/cursos/img/git-1-300x300.png" alt="imgens referencia ao curso">
+                    src="./img/git-1-300x300.png" alt="imgens referencia ao curso">
                     <p>
                         Você sabe o que é Git? Sabe a diferença entre Git e GitHub? Já tentou aprender versionamento, mas achou complicado ter que aprender dezenas de comandos e parâmetros? Pois veja esse curso GRÁTIS e prático, onde não usaremos NENHUM COMANDO! Você vai ser capaz de utilizar softwares de versionamento sem digitar nenhum comando no terminal.
                     </p>
@@ -63,7 +63,7 @@
                 <li>
                     <h2>HTML e CSS</h2>
                     <img class="logocursos" height="200px" width="200px" 
-                    src="/cursos/img/html5-300x300.jpg" alt="imgens referencia ao curso">
+                    src="./img/html5-300x300.jpg" alt="imgens referencia ao curso">
                     <p>
                         HTML5 (Hypertext Markup Language, versão 5) é uma linguagem de estruturação e apresentação de conteúdo para a World Wide Web. O conhecimento desta linguagem, juntamente com as tecnologias CSS3 e JavaScript é essencial para todos os profissionais de web.
 Curso completo para quem quer aprender a criar sites utilizando as tecnologias de HTML5 + CSS3 + JavaScript de uma maneira simples e objetiva. O professor Gustavo Guanabara vai mostrar passo-a-passo da criação de um site completo utilizando as três principais tecnologias do momento.
@@ -77,7 +77,7 @@ Curso completo para quem quer aprender a criar sites utilizando as tecnologias d
                 <li>
                     <h2>JavaScript</h2>
                     <img class="logocursos" height="200px" width="200px" 
-                    src="/cursos/img/javascript-300x300.jpg" alt="imgens referencia ao curso">
+                    src="./img/javascript-300x300.jpg" alt="imgens referencia ao curso">
                     <p>
                         Curso de linguagem JavaScript, voltado para iniciantes e para quem quiser aprender mais sobre ECMAScript, a versão padronizada do JS. Em um curso patrocinado pelo Google, o professor Gustavo Guanabara vai ensinar o conteúdo básico em 6 módulos que vão desde o conhecimento da linguagem até o uso de funções.
                     </p>
