--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="header">
-    <a href="./index.html"> <img class="logo" src="/img/hub.png" alt="Logotipo do Blog" /></a>
+    <a href="./index.html"> <img class="logo" src="./img/hub.png" alt="Logotipo do Blog"/></a>
     <nav class="nav">
       <ul class="ul">
         <li class="li"> <a href="./noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>      
@@ -32,7 +32,7 @@
       <li> Talvez seja o momento de descobrir o mundo da programação, 
         uma das áreas que mais cresce no mercado de trabalho.</li>
       <img class="telahome"
-      src="img/telahome.jpeg"
+      src="./img/telahome.jpeg"
       alt="Imagem retratando as tantas opções de códigos de programação."/>
 
     </ul>
