--- a/noticias_da_semana/noticias_da_semana.html
+++ b/noticias_da_semana/noticias_da_semana.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="header">
-    <a href="../index.html"> <img class="logo" src="/img/hub.png" alt="Logotipo do Blog" /></a>
+    <a href="../index.html"> <img class="logo" src="./img/hub.png" alt="Logotipo do Blog" /></a>
     <nav class="nav">
       <ul class="ul">
         <li class="li"> <a href="./noticias_da_semana.html">Notícias da Semana</a></li>      
