--- a/sobre_quem_somos/desenvolvedores.html
+++ b/sobre_quem_somos/desenvolvedores.html
@@ -11,27 +11,27 @@
   </head>
   <body>
     <header class="header">
-      <a href="/index.html"><img class="logo" src="/sobre_quem_somos/assets/images/hub.png" alt="Logotipo do Blog"></a>
+      <a href="../index.html"><img class="logo" src="./assets/images/hub.png" alt="Logotipo do Blog"></a>
       <nav class="nav">
         <ul class="ul">
           <li class="li">
-            <a href="/noticias_da_semana/noticias_da_semana.html"
+            <a href="../noticias_da_semana/noticias_da_semana.html"
               >Notícias da Semana</a
             >
           </li>
           <li>
-            <a href="/dicas_e_tutoriais/dicas_e_tutoriais.html"
+            <a href="../dicas_e_tutoriais/dicas_e_tutoriais.html"
               >Dicas e Tutoriais</a
             >
           </li>
-          <li><a href="/cursos/cursos.html">Cursos</a></li>
+          <li><a href="../cursos/cursos.html">Cursos</a></li>
           <li>
-            <a href="/historia_da_programacao/historia_da_programacao.html"
+            <a href="../historia_da_programacao/historia_da_programacao.html"
               >História da Programação</a
             >
           </li>
           <li>
-            <a href="/sobre_quem_somos/desenvolvedores.html"
+            <a href="./desenvolvedores.html"
               >Sobre Quem Somos</a
             >
           </li>
