--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -13,16 +13,16 @@
        <a href="/index.html"><img class="logo" src="./img/hub.png" alt="Logotipo do Blog"></a>
         <nav class="nav">
             <ul class="ul">
-              <li class="li">
-                <a href="../noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>      
               <li>
-                <a href="../dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>    
+                <a href="../noticias_da_semana/noticias_da_semana.html">NOTÍCIAS DA SEMANA</a></li>      
               <li>
-                <a href="./cursos.html">Cursos</a></li>
+                <a href="../dicas_e_tutoriais/dicas_e_tutoriais.html">DICAS E TUTORIAIS</a></li>    
               <li>
-                <a href="../historia_da_programacao/historia_da_programacao.html">História da Programação</a></li>
+                <a href="./cursos.html">CURSOS</a></li>
               <li>
-                <a href="../sobre_quem_somos/desenvolvedores.html">Sobre Quem Somos</a></li>        
+                <a href="../historia_da_programacao/historia_da_programacao.html">HISTÓRIA DA PROGRAMAÇÃO</a></li>
+              <li>
+                <a href="../sobre_quem_somos/desenvolvedores.html">SOBRE QUEM SOMOS</a></li>        
             </ul>
           </nav>
     </header>
@@ -42,10 +42,12 @@
     
                         Aprender Algoritmos e Lógica de Programação não é difícil! O professor Gustavo Guanabara, com mais de 20 anos de experiência, vai mostrar os passos para aprender a programar em 15 aulas bem descontraídas.
                     </p>
-                    <a href="https://www.cursoemvideo.com/curso/curso-de-algoritmo/" target="_blank">
+                    <a class="linkCurso" href="https://www.cursoemvideo.com/curso/curso-de-algoritmo/" target="_blank">
                         LINK PARA O CURSO</a>
                 </li>
                  </div>
+            </section>
+            <section>
                  <div class="curso2">
                 <li>
                     <h2>Git e Github</h2>
@@ -54,11 +56,13 @@
                     <p>
                         Você sabe o que é Git? Sabe a diferença entre Git e GitHub? Já tentou aprender versionamento, mas achou complicado ter que aprender dezenas de comandos e parâmetros? Pois veja esse curso GRÁTIS e prático, onde não usaremos NENHUM COMANDO! Você vai ser capaz de utilizar softwares de versionamento sem digitar nenhum comando no terminal.
                     </p>
-                    <a class="video-1" href="https://www.cursoemvideo.com/curso/curso-de-git-e-github/"
+                    <a class="linkCurso" href="https://www.cursoemvideo.com/curso/curso-de-git-e-github/"
                     target="_blank">
                         LINK PARA O CURSO</a>
                 </li>
                 </div>
+            </section>
+            <section>
                 <div class="curso3">
                 <li>
                     <h2>HTML e CSS</h2>
@@ -68,11 +72,13 @@
                         HTML5 (Hypertext Markup Language, versão 5) é uma linguagem de estruturação e apresentação de conteúdo para a World Wide Web. O conhecimento desta linguagem, juntamente com as tecnologias CSS3 e JavaScript é essencial para todos os profissionais de web.
 Curso completo para quem quer aprender a criar sites utilizando as tecnologias de HTML5 + CSS3 + JavaScript de uma maneira simples e objetiva. O professor Gustavo Guanabara vai mostrar passo-a-passo da criação de um site completo utilizando as três principais tecnologias do momento.
                     </p>
-                    <a href="https://www.cursoemvideo.com/curso/html5/"
+                    <a class="linkCurso" href="https://www.cursoemvideo.com/curso/html5/"
                     target="_blank">
                         LINK PARA O CURSO</a>
                 </li>
                 </div>
+            </section>
+            <section>
                 <div class="curso4">
                 <li>
                     <h2>JavaScript</h2>
@@ -81,7 +87,7 @@ Curso completo para quem quer aprender a criar sites utilizando as tecnologias d
                     <p>
                         Curso de linguagem JavaScript, voltado para iniciantes e para quem quiser aprender mais sobre ECMAScript, a versão padronizada do JS. Em um curso patrocinado pelo Google, o professor Gustavo Guanabara vai ensinar o conteúdo básico em 6 módulos que vão desde o conhecimento da linguagem até o uso de funções.
                     </p>
-                    <a href="https://www.cursoemvideo.com/curso/javascript/"
+                    <a class="linkCurso" href="https://www.cursoemvideo.com/curso/javascript/"
                     target="_blank">
                         LINK PARA O CURSO</a>
                 </li>
@@ -89,7 +95,7 @@ Curso completo para quem quer aprender a criar sites utilizando as tecnologias d
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <p>Todos os direitos reservados <span>&#169;</span> 2023 Blog da TI</p>
         <p>Veja o repósitório da página:</p>
         <a href="https://github.com/BarachoSilva/codigo-e-cafe" target="_blank">Repositório</a>
