--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-       <a href="/index.html"><img class="logo" src="./img/hub.png" alt="Logotipo do Blog"></a>
+       <a href="./index.html"><img class="logo" src="./img/hub.png" alt="Logotipo do Blog"></a>
         <nav class="nav">
             <ul class="ul">
               <li>
