--- a/sobre_quem_somos/desenvolvedores.html
+++ b/sobre_quem_somos/desenvolvedores.html
@@ -32,7 +32,7 @@
           </li>
           <li>
             <a href="./desenvolvedores.html"
-              >Sobre Quem Somos</a
+              >Quem Somos</a
             >
           </li>
         </ul>
@@ -205,21 +205,21 @@
         <h4>Envie-nos sua opinão, dúvida ou sugestão!</h4>
         <section class="sectionForm">
           <div class="data">
-            <p>Nome:</p>
+            <label for="">Nome:</label>
             <input
               type="text"
               name="userName"
               placeholder="Seu nome completo"
             />
 
-            <p>E-mail:</p>
+           <label for="">E-mail:</label>
             <input
               type="email"
               name="userEmail"
               placeholder="seuemail@exemplo.com"
             />
 
-            <p>O que você quer nos dizer?</p>
+            <label for="">O que você quer nos dizer?</label>
             <textarea name="userComment" id="" cols="30" rows="4"></textarea>
           </div>
 
